# telemetry-parser

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  event-mapping.md  parsing-lifecycle.md  replay-strategy.md
telemetry_parser/extraction/: event_extractor.py  field_mapper.py
telemetry_parser/normalisation/: event_normaliser.py  timestamp_utils.py
telemetry_parser/observability/: parser_observer.py
telemetry_parser/output/: event_emitter.py  structured_event.py
telemetry_parser/pipeline/: parser_pipeline.py
telemetry_parser/protocol/: message_decoder.py  sip_parser.py
telemetry_parser/stream/: session_tracker.py  tcp_reassembler.py
tests/extraction/: test_event_extractor.py  test_field_mapper.py
tests/pipeline/: test_parser_pipeline.py
tests/protocol/: test_message_decoder.py  test_sip_parser.py
tests/stream/: test_session_tracker.py  test_tcp_assembler.py
