[project]
name = "telemetry-parser"
version = "0.1.0"
description = "Structured telemetry extraction engine for schema-versioned analytics and ML pipelines"
requires-python = ">=3.11"
authors = [
    { name = "Nicolas" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
